<resources>

    <!-- App Labels -->
    <string name="app_name">ChronoTrack</string>
    <string name="new_game_activity">Add New Game</string>
    <string name="installed_app">Select Installed Application</string>
    <string name="create_alarm">Create New Alarm</string>

    <!-- Menu -->
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_add_alarm">Add New Alarm</string>
    <string name="action_edit">Edit Game</string>

    <!-- FAB Menu -->
    <string name="action_add_installed">Add Installed Game</string>
    <string name="action_add_uninstalled">Add Game Not On Device</string>

    <!-- Add New Game -->
    <string name="btn_change">Change</string>
    <string name="lbl_category">Category</string>
    <string name="hint_title">Title</string>
    <string name="lbl_unit">Unit</string>
    <string name="hint_unit">e.g. Energy, Heart, Key</string>
    <string name="lbl_rate">RCV</string>
    <string name="hint_rate">Recovery Rate in Minutes</string>
    <string name="lbl_maximum">MAX</string>
    <string name="hint_max">Maximum Stamina Value</string>
    <string name="unfilled_title">The title is missing.</string>
    <string name="hint_url">Enter URL</string>
    <string name="unfilled_url">The URL is missing.</string>
    <string name="invalid_url">The URL is invalid.</string>

    <!-- Game List Item -->
    <string name="game_category">Category</string>
    <string name="reorder_handle">Reorder</string>
    <string name="card_create">CREATE ALARM</string>
    <string name="card_edit">EDIT ENTRY</string>
    <string name="card_delete">DELETE GAME</string>

    <string name="delete_confirm_game">Are you sure you want to delete this game?</string>
    <string name="delete_confirm_alarm">Are you sure you want to delete this alarm?</string>

    <!-- Game Detail -->
    <string name="lbl_max">Maximum value:</string>
    <string name="lbl_rcv_rate">Recovery rate:</string>
    <string name="lbl_full_rcv">Full recovery:</string>

    <!-- Create New Alarm -->
    <string name="switch_stamina">Stamina</string>
    <string name="switch_condition">Condition</string>
    <string name="calculate_text">Calculate stamina recovery time</string>
    <string name="lbl_current">Current</string>
    <string name="arrow">&gt;&gt;</string>
    <string name="lbl_goal">Goal</string>
    <string name="condition_text">Set alarm condition</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="set_datetime">Date &amp; Time</string>
    <string name="set_countdown">Countdown</string>
    <string name="filler_time">hh:mm a</string>
    <string name="filler_date">MM/dd/yyyy</string>
    <string name="remind_me">Remind me in&#8230;</string>
    <string name="default_reminder">00h 00m 00s</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="number">00</string>
    <string name="day">d</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="second">s</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="alarm_label">Label</string>
    <string name="check_save">Save this alarm</string>

    <!-- Alarm List Item -->
    <string name="lbl_alarm">Label</string>
    <string name="filler_trigger_time">0 days 0 hours 0 minutes</string>
    <string name="filler_trigger_left">0 days 0 hours 0 minutes left</string>
    <string name="filler_stamina_progress">Stamina: 0/999</string>

    <string name="alarms_list">This is a list of alarms.</string>
    <string name="timer_text">This is a timer.</string>

</resources>
