<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.kevinrei.chronotrack.AddAlarmActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/create_alarm"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        style="@style/Margin" >

        <!-- Layout for condition alarms -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/Padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/condition_text"
                android:textStyle="italic"
                android:textColor="@color/textPrimary"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <LinearLayout
                android:id="@+id/layout_countdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_set_reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remind_me"/>

                <TextView
                    android:id="@+id/current_reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_small"
                    android:text="@string/default_reminder"
                    android:textColor="@color/textPrimary"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/alarm_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:hint="@string/alarm_label" />

        <CheckBox
            android:id="@+id/cb_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_save" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>