<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    tools:context="com.kevinrei.chronotrack.AddAlarmActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/create_alarm"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        style="@style/Margin" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_stamina_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/switch_stamina"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Switch
                android:id="@+id/switch_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toRightOf="@+id/lbl_stamina_layout"
                android:layout_toEndOf="@+id/lbl_stamina_layout"
                android:enabled="true" />

            <TextView
                android:id="@+id/lbl_condition_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toRightOf="@+id/switch_layout"
                android:layout_toEndOf="@+id/switch_layout"
                android:layout_centerVertical="true"
                android:text="@string/switch_condition"
                android:textColor="@color/textIcons"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </RelativeLayout>

        <ViewSwitcher
            android:id="@+id/viewSwitcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Padding" >

            <!-- Layout for stamina alarm -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical"
                style="@style/Padding" >

                <TextView
                    android:id="@+id/lbl_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/calculate_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="italic"
                    android:textColor="@color/textIcons"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/Margin" >

                    <TextView
                        android:id="@+id/lbl_current"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_current"
                        android:layout_alignParentTop="true"
                        android:layout_alignRight="@+id/picker_current"
                        android:layout_alignEnd="@+id/picker_current"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:gravity="center" />

                    <NumberPicker
                        android:id="@+id/picker_current"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lbl_current" />

                    <TextView
                        android:id="@+id/arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/picker_current"
                        android:layout_alignTop="@+id/picker_current"
                        android:layout_toRightOf="@+id/picker_current"
                        android:layout_toEndOf="@+id/picker_current"
                        android:gravity="center"
                        android:text="@string/arrow"
                        style="@style/Margin" />

                    <TextView
                        android:id="@+id/lbl_goal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_goal"
                        android:layout_alignParentTop="true"
                        android:layout_alignLeft="@+id/picker_goal"
                        android:layout_alignStart="@+id/picker_goal"
                        android:layout_alignRight="@+id/picker_goal"
                        android:layout_alignEnd="@+id/picker_goal"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:gravity="center" />

                    <NumberPicker
                        android:id="@+id/picker_goal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/arrow"
                        android:layout_toEndOf="@id/arrow"
                        android:layout_below="@+id/lbl_goal" />

                </RelativeLayout>

            </LinearLayout>


            <!-- Layout for condition alarms -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:orientation="vertical"
                style="@style/Padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/condition_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="italic"
                    android:textColor="@color/textIcons" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_large"
                    android:checkedButton="@+id/radio_datetime"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_datetime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_datetime" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:layout_marginStart="@dimen/margin_small"
                        android:text="@string/set_countdown" />

                </RadioGroup>

                <RelativeLayout
                    android:id="@+id/layout_datetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="visible" >

                    <LinearLayout
                        android:id="@+id/layout_set_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/btn_set_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/set_date" />

                        <TextView
                            android:id="@+id/current_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/filler_date" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_toRightOf="@+id/layout_set_date"
                        android:layout_toEndOf="@+id/layout_set_date"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/btn_set_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/set_time" />

                        <TextView
                            android:id="@+id/current_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/filler_time" />

                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/layout_countdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <Button
                        android:id="@+id/btn_set_reminder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remind_me"/>

                    <TextView
                        android:id="@+id/current_reminder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:layout_marginStart="@dimen/margin_small"
                        android:text="@string/filler_reminder"
                        android:textColor="@color/textIcons"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

            </LinearLayout>

        </ViewSwitcher>

        <EditText
            android:id="@+id/alarm_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:hint="@string/alarm_label" />

        <CheckBox
            android:id="@+id/cb_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_delete" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>