<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?selectableItemBackground"
    card_view:cardCornerRadius="4dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:orientation="vertical"
        style="@style/Padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/alarm_toggle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:clickable="true"
                android:src="@drawable/ic_alarm_on"
                android:contentDescription="@string/lbl_alarm" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/label_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alarm_label"
                    android:textSize="32sp"
                    android:textColorHint="@color/textPrimary"
                    android:singleLine="true"
                    android:background="@android:color/transparent"/>

                <TextView
                    android:id="@+id/alarm_trigger_time"
                    android:text="@string/filler_trigger_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:weightSum="3" >

            <TextView
                android:id="@+id/time_left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/filler_trigger_left" />

            <TextView
                android:id="@+id/stamina_progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filler_stamina_progress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:progress="0"
                android:max="100"
                style="@android:style/Widget.ProgressBar.Horizontal" />


            <ImageView
                android:id="@+id/delete_alarm"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:clickable="true"
                android:src="@drawable/ic_delete"
                android:contentDescription="@string/delete_confirm_game"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>